remove guava - add vavr